Fix blurry search button icon

--- a/styles.css
+++ b/styles.css
@@ -178,6 +178,9 @@ button:active {
     border: 0;
 
     width: 25px;
+    height: auto;
+
+    object-fit: contain;
 }
 
 
